tests/aster/x/mochi/rosetta/de-bruijn-sequences.error
error[A026]: argument 1 to parseIntStr type mismatch: string vs any
  --> /workspace/mochi/tests/rosetta/x/Mochi/de-bruijn-sequences.mochi:74:27

 74 |       let n = parseIntStr(s)
    |                           ^

help:
  Ensure arguments match parameter types
